# bio-overrefusal-v0.1

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SAFETY.md  dataset_card.md  pyproject.toml  reviewer_notes.md  tier_definitions.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dataset_row_review.yml  evaluation_result.yml
.github/workflows/: ci.yml
data/: queries.jsonl
docs/: active_experiments.md  huggingface_release.md  public_release_checklist.md
results/: fpr_report.md  fpr_table.csv  iaa_report.md  qualitative_report.md  stats_report.md  stats_table.json
schema/: features.py  jsonl_schema.md  vocab.yaml
scripts/: analyze_refusals.py  analyze_results.py  classify_with_llm.py  compute_iaa.py  compute_stats.py  prepare_hf_release.py  run_claude_eval.py  run_context_condition.py  run_eval_budget_plan.sh  run_gemini_pro_fpr.py  run_gpt4o_t1_t3.py  run_multi_eval.py  summarize_context_results.py
tests/: fixture_5rows.jsonl  test_hf_release.py  test_loader.py
