[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-overrefusal"
version = "0.1.0"
description = "Expert-annotated benchmark for measuring false-positive refusal rates on legitimate biology research queries."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "JangKeun Kim" }
]
keywords = [
  "ai-safety",
  "biosecurity",
  "biology",
  "benchmark",
  "llm-evaluation",
  "over-refusal"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "anthropic>=0.83.0",
  "datasets>=2.19.0",
  "irrCAC>=0.4.0",
  "numpy>=1.26.0",
  "openai>=1.55.0",
  "pandas>=2.2.0",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",
  "statsmodels>=0.14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]
release = [
  "huggingface_hub>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/jang1563/bio-overrefusal-v0.1"
Repository = "https://github.com/jang1563/bio-overrefusal-v0.1"
Issues = "https://github.com/jang1563/bio-overrefusal-v0.1/issues"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
